syntax = "proto3";
package dfs;

option go_package = "github.com/xhsun/grpc-file-transfer/dfs";

service FileTransfer{
     // Store files on the server
     rpc Store(stream File) returns (Empty) {}

     // Fetch files from the server
     rpc Fetch(FileName) returns (stream FileContent) {}
 
     // Delete files from the server
     rpc Delete(FileName) returns (Empty) {}
 
     // List all files on the server
     rpc ListAll(Empty) returns (FileList) {}
}

message File{
    string Name = 1;
    bytes Content = 2;
}

message FileName {
    string Name = 1;
}

message FileContent {
    bytes Data = 1;
    uint64 Total = 2;
}

message FileList {
    map<string, uint64> Files = 1;
}

message Empty {
}